--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>GPA</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-	<link rel="stylesheet" type="text/css" href="gpa-calculater.css">
+	<link rel="stylesheet" type="text/css" href="gpa-calculator.css">
 
 </head>
 <body>
@@ -97,7 +97,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 
-	<script src="gpaCalculater.js"></script>
+	<script src="gpaCalculator.js"></script>
 
 
 
