--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>GPA</title>
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
 	<link rel="stylesheet" type="text/css" href="gpa-calculator.css">
@@ -55,7 +56,7 @@
 					<div class="collapse collapse-error">
 						<div class="alert alert-danger">
 							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-							You didn't give the correct input!!!
+							Oooops !! There is something wrong !
 						</div>
 					</div>
 
@@ -76,9 +77,11 @@
 			<table class="table table-hover">
 				<thead>
 					<tr>
-						<th>*</th>
-						<th>Point</th>
-						<th>Credit</th>
+						<th>count</th>
+						<th>point</th>
+						<th>credit</th>
+						<th>gpa</th>
+						<th>remove</th>
 					</tr>
 				</thead>
 				<tbody id="data-table">
@@ -96,7 +99,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
-
+	<script src="jquery-tgs/jquery.tgs.js"></script>
 	<script src="gpaCalculator.js"></script>
 
 
